# hub-banking-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  changes.MD  env.example.env  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
collections/: Algo-tech-bs.postman_collection.json
config/: gunicorn.conf.py
deploy/: README.md  nginx-daycoval-sandbox.conf
docker/: Dockerfile  README.md  docker-compose.yml
docker/postgres/init/: 01-create-schema.sql
entrypoints/: init-db.sh
migrations/: README.MD  README.md  env.py
migrations/versions/: 1667e094ef9e_init_database_models.py  2357782fc459_add_new_tables_in_databasemanager.py  28fb9b0aaf72_add_unique_name_in_rooms.py  5932fb4affaa_init_database_models.py  877de01c4726_add_unique_name_in_table_banker.py  8bc31b7c0d06_add_rooms_users.py  a8c2843827ed_add_table_loan_operations.py  ac1a1f3fe450_add_document_in_relashtions_employee.py  c8f91e2ab410_add_safra_batch_search_table.py  f8a1c2d34e56_rooms_name_unique_partial_not_deleted.py
src/: app.py  main.py
src/core/: dashboard.py  datacatalog.py  finance.py  flag.py  login.py  operational.py  payment.py  proposal.py  role.py  rooms.py  settings.py  statistics.py  user.py
src/core/config/: settings.py
src/core/exceptions/: custom.py
src/database/: __init__.py  database.py  session.py  uri.py
src/domain/dtos/: auth.py  bankers.py  employee.py  employee_situation.py  financial_agreements.py  loan_operation.py  proposal.py  proposal_account.py  proposal_document.py  proposal_loan.py  rooms.py  rooms_employee.py  safra.py  safra_batch_search.py  safra_credit_ligth_house.py  safra_employing_body.py  safra_financial_agreements.py  safra_legal_regime.py  safra_professions.py  safra_proposal.py  safra_tables.py
src/domain/enum/: employee_role.py  proposal_loan.py
src/domain/exceptions/: auth.py  bankers.py  employee.py  financial_agreements.py  rooms.py  (+3 more)
src/models/: base.py  models.py
src/router/: __init__.py  bankers.py  flag.py  hourspoint.py  login.py  payment.py  role.py  rooms.py  table.py  user.py
src/settings/: _base.py
src/utils/: log.py  metadata.py
tests/: async_http.py  conftest.py  test_smoke.py
tests/fixtures/: banker_factories.py  employee_factories.py  financial_agreements_factories.py  loan_operation_factories.py  room_factories.py  safra_proposal_min.py  safra_test_constants.py
tests/integration/: conftest.py  test_postgres_integration.py
(+201 files in other folders)
