[project]
name = "hub-banking-platform"
version = "1.0.1"
description = "Plataforma bancária / CRM Athenas — API Flask"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Software Hedris Pereira", email = "hedrisgts@gmail.com" },
]
dependencies = [
    "Flask>=3.1,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "flask-cors>=6.0,<7.0",
    "Flask-JWT-Extended>=4.7,<5.0",
    "flask-restx>=1.3,<2.0",
    "pandas>=2.2,<3.0",
    "PyMuPDF>=1.26,<2.0",
    "pillow>=11.0,<12.0",
    "gunicorn>=23.0,<24.0",
    "alembic>=1.14,<2.0",
    "werkzeug>=3.0,<4.0",
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.12"
taskipy = "^1.14.1"
pytest-dotenv = "^0.5.2"
bandit = "^1.8.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-v",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "-p",
    "no:warnings",
]
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "need_dot_env: tests that consult data in a dot env file.",
    "unit: unit tests.",
]
pythonpath = ["."]
env_files = [".env.test"]

[tool.coverage.run]
omit = [
    "src/**/__init__.py",
]

[tool.ruff]
target-version = "py312"
fix = true
src = ["src", "tests", "config"]

[tool.ruff.lint]
extend-ignore = ["PLW0603", "PLR0913"]
select = [
    "E",
    "W",
    "F",
    "I",
    "PL",
    "PT",
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
files = ["src"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.bandit]
targets = ["src"]

[tool.taskipy.tasks]
lint = "ruff check . --fix && ruff format ."
format = "ruff format ."
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
open_coverage = "open htmlcov/index.html"
pre_test_unit = "task lint"
test_unit = "pytest tests -s -x --cov=src -vv"

[alembic]
script_location = "migrations"
